View Issue Details

IDProjectCategoryView StatusLast Update
0024298Open CASCADEOCCT:Codingpublic2013-12-19 13:59
ReporterskiAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinuxOSDebian 4.0 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024298: Eliminate GCC compiler warning about unused in linux functions
DescriptionEliminate GCC compiler warning about functions for Win platform only.
TagsNo tags attached.
Test case numberNot needed

Activities

abv

2013-10-30 09:42

manager   ~0026352

No remarks, please test

mkv

2013-10-30 14:15

tester   ~0026364

Dear BugMaster,

Branch CR24298 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: b064d44c7af223bb2fdd87d21452799af35ba142

Number of compiler warnings:

occt component :
Linux: 323 (323 on master)
Windows: 12 (0 on master)

New additional compilation warnings on Windows platform:
http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/job/mnt-CR24298-master_build_occt_windows/1/warnings28Result/?

OpenGl_Workspace_2.cxx:231, MSBuild, Priority: High
'getMaxFrameSize' : static functions with block scope are illegal

OpenGl_Workspace_2.cxx:231, MSBuild, Priority: High
'getMaxFrameSize' : local function definitions are illegal

OpenGl_Workspace_2.cxx:254, MSBuild, Priority: High
'getDimensionsTiling' : static functions with block scope are illegal

OpenGl_Workspace_2.cxx:254, MSBuild, Priority: High
'getDimensionsTiling' : local function definitions are illegal

OpenGl_Workspace_2.cxx:271, MSBuild, Priority: High
'initBufferStretch' : local function definitions are illegal

OpenGl_Workspace_2.cxx:271, MSBuild, Priority: High
'initBufferStretch' : static functions with block scope are illegal

OpenGl_Workspace_2.cxx:303, MSBuild, Priority: High
'initBufferTiling' : static functions with block scope are illegal

OpenGl_Workspace_2.cxx:303, MSBuild, Priority: High
'initBufferTiling' : local function definitions are illegal

products component :
Linux: 189 (189 on master)
Windows: 287 (287 on master)

abv

2013-10-30 16:02

manager   ~0026368

No remarks, please test

mkv

2013-11-01 12:29

tester   ~0026419

Dear BugMaster,

Branch CR24298 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 9640c81a60d55db05aecdec97c83e974721cbf3c

Number of compiler warnings:

occt component :
Linux: 317 (323 on master)
Windows: 0 (0 on master)

products component :
Linux: 189 (189 on master)
Windows: 287 (287 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 355846552 / 356305680
Total CPU difference: 43520.310000000725 / 40672.84000000072

Testing on Windows:
Total MEMORY difference: 407360568 / 406469940
Total CPU difference: 28560.21875 / 34773.328125

There are not differences in images found by testdiff.

Related Changesets

occt: master 47afc367

2013-11-01 09:32:12

ski


Committer: bugmaster Details Diff
0024298: Eliminate GCC compiler warning about unused in linux functions

Eliminated GCC compiler warning about functions for Win platform only.
Illegal function definitions were fixed.
Affected Issues
0024298
mod - src/OpenGl/OpenGl_Workspace_2.cxx Diff File

Issue History

Date Modified Username Field Change
2013-10-29 18:58 ski New Issue
2013-10-29 18:58 ski Assigned To => ski
2013-10-29 18:59 ski Status new => assigned
2013-10-29 19:38 ski Status assigned => resolved
2013-10-29 19:38 ski Assigned To ski => abv
2013-10-30 09:42 abv Note Added: 0026352
2013-10-30 09:42 abv Assigned To abv => bugmaster
2013-10-30 09:42 abv Status resolved => reviewed
2013-10-30 10:51 mkv Assigned To bugmaster => mkv
2013-10-30 14:15 mkv Note Added: 0026364
2013-10-30 14:16 mkv Test case number => Not needed
2013-10-30 14:16 mkv Assigned To mkv => ski
2013-10-30 14:16 mkv Status reviewed => assigned
2013-10-30 15:18 ski Assigned To ski => abv
2013-10-30 15:18 ski Status assigned => resolved
2013-10-30 16:02 abv Note Added: 0026368
2013-10-30 16:02 abv Assigned To abv => bugmaster
2013-10-30 16:02 abv Status resolved => reviewed
2013-10-31 08:13 mkv Assigned To bugmaster => mkv
2013-11-01 12:29 mkv Note Added: 0026419
2013-11-01 12:30 mkv Assigned To mkv => bugmaster
2013-11-01 12:30 mkv Status reviewed => tested
2013-11-06 11:07 bugmaster Changeset attached => occt master 47afc367
2013-11-06 11:07 bugmaster Status tested => verified
2013-11-06 11:07 bugmaster Resolution open => fixed
2013-11-06 11:19 bugmaster Target Version => 6.7.1
2013-11-06 11:19 bugmaster Target Version 6.7.1 => 6.7.0
2013-12-19 13:51 bugmaster Status verified => closed
2013-12-19 13:59 bugmaster Fixed in Version => 6.7.0
2014-01-11 11:58 abv Category OCCT Release:BUILD => OCCT:Coding