0024298: Eliminate GCC compiler warning about unused in linux functions

Eliminated GCC compiler warning about functions for Win platform only.
Illegal function definitions were fixed.